--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 							<header>
 								<h1>Hi. I'm <strong>Nielisson</strong>.</h1>
 							</header>
-							<p>And this is <strong>portfolio</strong>.</p>
+							<p>And this is my <strong>portfolio</strong>.</p>
 							<a href="#work" class="button large scrolly">Learn about what I do</a>
 						</div>
 					</div>
