--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
-								<span class="icon solid featured fa-camera-retro"></span>
+								<span class="fab fa-unity"></span> 
 								<h3>Unity</h3>
 								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
 							</section>
