--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 			<article id="contact" class="wrapper style4">
 				<div class="container medium">
 					<header>
-						<h2>Have me make stuff for you.</h2>
+						<h2>will you like to do stuff with my creativity.</h2>
 						<p>Ornare nulla proin odio consequat sapien vestibulum ipsum.</p>
 					</header>
 					<div class="row">
