--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
 								<span class="fab fa-unity"></span> 
-								<img src="images/illustration_monster_hunter.png" alt="" />
+								<img src="images/illustration_monster_hunter.png" width="200" height="200" alt="" />
 								
 								<h3>Unity</h3>
 								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
