--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
 								<!-- <span class="icon featured fa-comments"></span>//-->
-								<img src="images/icon_controller.png" width="300" height="200" alt="">
+								<img src="images/icon_game.png" width="300" height="300" alt="">
 								
 								<h3>Game Design</h3>
 								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
