--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 								<h1><strong>Nielisson Mendonca</strong></h1>
 							</header>
 							<p>2D artist, Game and Level Designer</p>
-							<a href="#work" class="button large scrolly">Learn about what I do</a>
+							<a href="#work" class="button large scrolly">Press Start</a>
 						</div>
 					</div>
 				</div>
