--- a/index.html
+++ b/index.html
@@ -149,6 +149,22 @@
 						<h2>Have me make stuff for you.</h2>
 						<p>Ornare nulla proin odio consequat sapien vestibulum ipsum.</p>
 					</header>
+
+					<form action="https://formspree.io/f/xvovgjwk" method="POST">
+					<label>
+					  Your email:
+					  <input type="text" name="_replyto">
+					</label>
+					<label>
+					  Your message:
+					  <textarea name="message"></textarea>
+					</label>
+				  
+					<!-- your other form fields go here -->
+				  
+					<button type="submit">Send</button>
+				  </form>
+
 					<div class="row">
 						<div class="col-12">
 							<form method="post" action="#">
