--- a/index.html
+++ b/index.html
@@ -152,6 +152,10 @@
 
 					<form action="https://formspree.io/f/xvovgjwk" method="POST">
 					<label>
+						Your name:
+						<textarea name="message"></textarea>
+					</label>
+					<label>
 					  Your email:
 					  <input type="text" name="_replyto">
 					</label>
@@ -164,7 +168,7 @@
 				  
 					<button type="submit">Send</button>
 				  </form>
-
+<!--
 					<div class="row">
 						<div class="col-12">
 							<form method="post" action="#">
@@ -189,6 +193,7 @@
 									</div>
 								</div>
 							</form>
+-->
 						</div>
 						<div class="col-12">
 							<hr />
