--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 								<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 								<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 								<li><a href="#" class="icon brands fa-itch-io"><span class="label">Itch.io 1</span></a></li>
-								<li><a href="#" class="fab fa-discord"><span class="label">Discord</span></a></li>
+								<li><a href="#" class="fab fa-discord"><span class="label"></span></a></li>
 								
 								<!--
 								<li><a href="#" class="icon solid fa-rss"><span>RSS</span></a></li>
