--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@
 			<article id="contact" class="wrapper style4">
 				<div class="container medium">
 					<header>
-						<h2>Have me make stuff for you.</h2>
-						<p>Ornare nulla proin odio consequat sapien vestibulum ipsum.</p>
+						<h2>Contact</h2>
+						<p>Get in touch!</p>
 					</header>
 
 					<form action="https://formspree.io/f/xvovgjwk" method="POST">
@@ -164,7 +164,7 @@
 
 					<label>
 					  Your message:
-					  <textarea name="message"></textarea>
+					  <textarea name="message">Leave a message here</textarea>
 					</label>
 					<br>
 					<label>
