--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 
 					<label>
 						Your name:
-						<input type="text" name="name">
+						<input type="text" name="name">Your name</input>
 					</label>
 
 					<label>
