--- a/index.html
+++ b/index.html
@@ -206,11 +206,11 @@
 							<hr />
 							<h3>Find me on ...</h3>
 							<ul class="social">
-								<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+								<li><a href="https://twitter.com/nielisson" class="icon brands fa-twitter" target=”_blank”><span class="label">Twitter</span></a></li>
+								<li><a href="#" class="icon brands fa-facebook-f" target=”_blank”><span class="label">Facebook</span></a></li>
 								<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 								<li><a href="#" class="icon brands fa-itch-io"><span class="label">Itch.io 1</span></a></li>
-								<li><a href="#" class="fab fa-discord"><span class="label"></span></a></li>
+								<li><a href="#" class="icon brands fa-discord"><span class="label"></span></a></li>
 								
 								<!--
 								<li><a href="#" class="icon solid fa-rss"><span>RSS</span></a></li>
