--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
 					<form action="https://formspree.io/f/xvovgjwk" method="POST">
 
 					<label>
-						Your name:
-						<input type="text" name="name">Your name</input>
+						<p style:white>Your name </p>
+						<input type="text" name="name"> 
 					</label>
 
 					<label>
