--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 					<form action="https://formspree.io/f/xvovgjwk" method="POST">
 
 					<label>
-						<p style:white>Your name </p>
+						<font color="white">Your name </font>
 						<input type="text" name="name"> 
 					</label>
 
