--- a/index.html
+++ b/index.html
@@ -147,23 +147,23 @@
 				<div class="container medium">
 					<header>
 						<h2>Contact</h2>
-						<p>Get in touch!</p>
+						<p>Leave me a note</p>
 					</header>
 
 					<form action="https://formspree.io/f/xvovgjwk" method="POST">
 
 					<label>
-						<font color="white">Your name </font>
+						<p align="left"> <font color="white">Your name </font></p>
 						<input type="text" name="name"> 
 					</label>
 
 					<label>
-					  Your email:
+						<p align="left"> <font color="white">Your email: </font></p>
 					  <input type="text" name="_replyto">
 					</label>
 
 					<label>
-					  Your message:
+						<p align="left"> <font color="white">Your message: </font></p>
 					  <textarea name="message">Leave a message here</textarea>
 					</label>
 					<br>
