--- a/index.html
+++ b/index.html
@@ -208,9 +208,9 @@
 							<ul class="social">
 								<li><a href="https://twitter.com/nielisson" class="icon brands fa-twitter" target=”_blank”><span class="label">Twitter</span></a></li>
 <!--							<li><a href="#" class="icon brands fa-facebook-f" target=”_blank”><span class="label">Facebook</span></a></li>			-->
-								<li><a href="www.linkedin.com/in/nielisson" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-								<li><a href="https://nielisson.itch.io/" class="icon brands fa-itch-io"><span class="label">Itch.io 1</span></a></li>
-								<li><a href="#" class="icon brands fa-discord" alt="Niesso#5607"><span class="label">Discord</span></a></li>
+								<li><a href="www.linkedin.com/in/nielisson" class="icon brands fa-linkedin-in" target=”_blank”><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://nielisson.itch.io/" class="icon brands fa-itch-io" target=”_blank”><span class="label">Itch.io 1</span></a></li>
+								<li><a href="Niesso#5607" class="icon brands fa-discord" alt="Niesso#5607" target=”_blank”><span class="label">Discord</span></a></li>
 								
 								<!--
 								<li><a href="#" class="icon solid fa-rss"><span>RSS</span></a></li>
