--- a/index.html
+++ b/index.html
@@ -153,18 +153,18 @@
 					<form action="https://formspree.io/f/xvovgjwk" method="POST">
 
 					<label>
-						<p align="left"> <font color="white">Your name </font></p>
-						<input type="text" name="name"> 
+						<p align="left"> <font color="white">Your name </font>
+						<input type="text" name="name"> </p>
 					</label>
 
 					<label>
-						<p align="left"> <font color="white">Your email: </font></p>
-					  <input type="text" name="_replyto">
+						<p align="left"> <font color="white">Your email: </font>
+					  <input type="text" name="_replyto"></p>
 					</label>
 
 					<label>
-						<p align="left"> <font color="white">Your message: </font></p>
-					  <textarea name="message">Leave a message here</textarea>
+						<p align="left"> <font color="white">Your message: </font>
+					  <textarea name="message">Leave a message here</textarea></p>
 					</label>
 					<br>
 					<label>
@@ -206,10 +206,11 @@
 							<hr />
 							<h3>Find me on ...</h3>
 							<ul class="social">
-								<li><a href="https://twitter.com/nielisson" class="icon brands fa-twitter" target=”_blank”><span class="label">Twitter</span></a></li>
+								
 <!--							<li><a href="#" class="icon brands fa-facebook-f" target=”_blank”><span class="label">Facebook</span></a></li>			-->
-								<li><a href="www.linkedin.com/in/nielisson" class="icon brands fa-linkedin-in" target=”_blank”><span class="label">LinkedIn</span></a></li>
-								<li><a href="https://nielisson.itch.io/" class="icon brands fa-itch-io" target=”_blank”><span class="label">Itch.io 1</span></a></li>
+								<li><a href="www.linkedin.com/in/nielisson" class="icon brands fa-linkedin-in" target=”_blank” alt="LinkedIn"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://nielisson.itch.io/" class="icon brands fa-itch-io" target=”_blank” alt="Itch.io"><span class="label">Itch.io 1</span></a></li>
+								<li><a href="https://twitter.com/nielisson" class="icon brands fa-twitter" target=”_blank” alt="Twitter"><span class="label">Twitter</span></a></li>
 								<li><a href="Niesso#5607" class="icon brands fa-discord" alt="Niesso#5607" target=”_blank”><span class="label">Discord</span></a></li>
 								
 								<!--
