--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 							<ul class="social">
 								
 <!--							<li><a href="#" class="icon brands fa-facebook-f" target=”_blank”><span class="label">Facebook</span></a></li>			-->
-								<li><a href="www.linkedin.com/in/nielisson" class="icon brands fa-linkedin-in" target=”_blank” alt="LinkedIn"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://www.linkedin.com/in/nielisson" class="icon brands fa-linkedin-in" target=”_blank” alt="LinkedIn"><span class="label">LinkedIn</span></a></li>
 								<li><a href="https://nielisson.itch.io/" class="icon brands fa-itch-io" target=”_blank” alt="Itch.io"><span class="label">Itch.io 1</span></a></li>
 								<li><a href="https://twitter.com/nielisson" class="icon brands fa-twitter" target=”_blank” alt="Twitter"><span class="label">Twitter</span></a></li>
 								<li><a href="Niesso#5607" class="icon brands fa-discord" alt="Niesso#5607" target=”_blank”><span class="label">Discord</span></a></li>
