--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 								<li><a href="https://www.linkedin.com/in/nielisson" class="icon brands fa-linkedin-in" target=”_blank” title="LinkedIn"><span class="label">LinkedIn</span></a></li>
 								<li><a href="https://nielisson.itch.io/" class="icon brands fa-itch-io" target=”_blank” title="Itch.io"><span class="label">Itch.io 1</span></a></li>
 								<li><a href="https://twitter.com/nielisson" class="icon brands fa-twitter" target=”_blank” title="Twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="Niesso#5607" class="icon brands fa-discord" title="Niesso#5607" target=”_blank”><span>Discord</span></a></li>
+								<li><a href="Niesso#5607" class="icon brands fa-discord" title="Niesso#5607" target=”_blank”><span class="label">Discord</span></a></li>
 								<li><a href="https://www.behance.net/nielisson" class="icon brands fa-behance" title="Behance" target=”_blank”><span class="label">Behance</span></a></li>
 								
 								
