--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 					</div>
 					<footer>
 						<ul id="copyright">
-							<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li><font size="2">&copy; Nielisson Mendonca. All rights reserved.</li><li>Design: <a href="http://html5up.net" target="_blank">HTML5 UP</a></font></li>
 						</ul>
 					</footer>
 				</div>
