--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 								<h1><strong>Nielisson Mendonca</strong></h1>
 							</header>
 							<p>2D artist, Game and Level Designer</p>
-							<a href="#work" class="button large scrolly">Press Start</a>
+							<p align="center"><a href="#work" class="button large scrolly">Press Start</a></p>
 						</div>
 					</div>
 				</div>
@@ -166,9 +166,8 @@
 						<p align="left"> <font color="white">Your message: </font>
 					  <textarea name="message">Leave a message here</textarea></p>
 					</label>
-					<br>
 					<label>
-						Your file:
+					<p align="left">Your file (optional):</p>
 						<input type="file" name="upload">
 					  </label>
 					<br>
