--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 					<div class="row">
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="https://nielisson.itch.io/candy-tower" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/candy_tower" alt="Candy Tower" /></a>
+								<a href="https://nielisson.itch.io/candy-tower" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/candy_tower.png" alt="Candy Tower" /></a>
 								<h3><a href="https://nielisson.itch.io/candy-tower" target="_blank">Candy Tower</a></h3>
 								<p>In this tower defense, your main objective is to destroy all teeth with candies! Isn't that what candies do?</p>
 								<p>Roles: <b>Programming/Graphics</b></p>
@@ -107,7 +107,7 @@
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="https://dyoxyne.itch.io/playback-brackeys-jam-20202" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/playback" alt="Playback" /></a>
+								<a href="https://dyoxyne.itch.io/playback-brackeys-jam-20202" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/playback.png" alt="Playback" /></a>
 								<h3><a href="https://dyoxyne.itch.io/playback-brackeys-jam-20202" target="_blank">Playback</a></h3>
 								<p>Everyone in town is looking for something to brighten up their day. With the help of your cassette recorder, you can record and rewind the sounds that people need to turn their moods around!</p>
 							</article>
