--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
 								<a href="https://nielisson.itch.io/candy-tower" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/candy_tower.png" alt="Candy Tower" /></a>
 								<h3><a href="https://nielisson.itch.io/candy-tower" target="_blank">Candy Tower</a></h3>
 								<p>In this tower defense, your main objective is to destroy all teeth with candies! Isn't that what candies do?</p>
-								<p>Roles: <b>Programming/Graphics</b></p>
-								<a href="https://nielisson.itch.io/candy-tower" class="button small scrolly">Check it out</a>
+								<p>Roles: <b>Programming and Graphics</b></p>
+								<a href="https://nielisson.itch.io/candy-tower" class="button small scrolly" target="_blank">Check it out</a>
 								
 							</article>
 						</div>
@@ -110,6 +110,8 @@
 								<a href="https://dyoxyne.itch.io/playback-brackeys-jam-20202" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/playback.png" alt="Playback" /></a>
 								<h3><a href="https://dyoxyne.itch.io/playback-brackeys-jam-20202" target="_blank">Playback</a></h3>
 								<p>Everyone in town is looking for something to brighten up their day. With the help of your cassette recorder, you can record and rewind the sounds that people need to turn their moods around!</p>
+								<p>Roles: <b>Game Design and Graphics</b></p>
+								<a href="https://dyoxyne.itch.io/playback-brackeys-jam-20202" class="button small scrolly" target="_blank">Check it out</a>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
