--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 								<h1><strong>Nielisson Mendonca</strong></h1>
 							</header>
 							<p>2D artist, Game and Level Designer</p>
-							<a href="documents/CV_Nielisson-Mendonca-Da-Silva_EN.pdf" class="button large scrolly">Download my résumé</a>
+							<a href="documents/CV_Nielisson-Mendonca-Da-Silva_EN.pdf" class="button large scrolly">Download my resume</a>
 							<a href="documents/CV_Nielisson-Mendonca-Da-Silva_FR" class="button large scrolly">Télécharger mon CV</a>
 							
 							
@@ -107,7 +107,7 @@
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="https://dyoxyne.itch.io/playback-brackeys-jam-20202" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/playback.png" alt="Playback" /></a>
+								<a href="https://dyoxyne.itch.io/playback-brackeys-jam-20202" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/playback.gif" alt="Playback" /></a>
 								<h3><a href="https://dyoxyne.itch.io/playback-brackeys-jam-20202" target="_blank">Playback</a></h3>
 								<p>Everyone in town is looking for something to brighten up their day. With the help of your cassette recorder, you can record and rewind the sounds that people need to turn their moods around!</p>
 								<p>Roles: <b>Game Design and Graphics</b></p>
