--- a/index.html
+++ b/index.html
@@ -116,16 +116,19 @@
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-								<h3><a href="#">Lorem ipsum</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<a href="http://greedfall.com/" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/greedfall.jpg" alt="" /></a>
+								<h3><a href="http://greedfall.com/" target="_blank">Greedfall (Released for PC, XBOX One and PS4)</a></h3>
+								<p>As a GUI integrator, I was responsible for the integration of the UI assets and I also retouched/created several icons and other elements.</p>
+								<a href="http://greedfall.com/" class="button small scrolly" target="_blank">Check it out</a>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-								<h3><a href="#">Tempus dolore</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<a href="https://nielisson.itch.io/sky-puppy" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/skypuppy.png" alt="" /></a>
+								<h3><a href="https://nielisson.itch.io/sky-puppy" target="_blank">SkyPuppy</a></h3>
+								<p>In this little puzzle, the player is supposed to make a clear path for a dog that is trapped in a house on fire.</p>
+								<p>Roles: <b>Game and Level Design | Art </b></p>
+								<a href="https://nielisson.itch.io/sky-puppy" class="button small scrolly" target="_blank">Check it out</a>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
