--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
 								<a href="http://greedfall.com/" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/greedfall.jpg" alt="" /></a>
 								<h3><a href="http://greedfall.com/" target="_blank">Greedfall (Released for PC, XBOX One and PS4)</a></h3>
 								<p>As a GUI integrator, I was responsible for the integration of the UI assets and I also retouched/created several icons and other elements.</p>
+								<p>Role: <b>GUI artist</b></p>								
 								<a href="http://greedfall.com/" class="button small scrolly" target="_blank">Check it out</a>
 							</article>
 						</div>
@@ -133,9 +134,12 @@
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
-								<h3><a href="#">Feugiat aliquam</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<a href="https://nielisson.itch.io/tiny-elves" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/tinyelves.gif" alt="" /></a>
+								<h3><a href="https://nielisson.itch.io/tiny-elves" target="_blank">Tiny Elves: mighty friendship</a></h3>
+								<p>Lost in a strange world, these tiny elves will have to make proof of their friendship by working together.</p>
+								<p>Roles: <b>Game and Level Design | Art </b></p>								
+								<a href="https://nielisson.itch.io/tiny-elves" class="button small scrolly" target="_blank">Check it out</a>
+								
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
