--- a/index.html
+++ b/index.html
@@ -144,9 +144,11 @@
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
-								<h3><a href="#">Sed amet ornare</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<a href="https://www.youtube.com/watch?v=gSYmrgwn3Lo&feature=youtu.be" class="image featured"><img src="images/portfolio_thumbnails/lemaitre.png" alt="" /></a>
+								<h3><a href="https://www.youtube.com/watch?v=gSYmrgwn3Lo&feature=youtu.be" target="_blank">Le maître de la flûte en bois</a></h3>
+								<p>An adventure about a forest spirit that accompany a flock of birds that are migrating to the south.</p>
+								<p>Roles: <b>Game and Level Design | Art </b></p>								
+								<a href="https://www.youtube.com/watch?v=gSYmrgwn3Lo&feature=youtu.be" class="button small scrolly" target="_blank">Check it out</a>
 							</article>
 						</div>
 					</div>
