--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
 			<article id="portfolio" class="wrapper style3">
 				<div class="container">
 					<header>
-						<h2>Here’s some stuff I made recently.</h2>
-						<p>Proin odio consequat  sapien vestibulum consequat lorem dolore feugiat.</p>
+						<h2>Portfolio</h2>
+						<p>These are my favorite projects, some of them are from game jams.</p>
 					</header>
 					<div class="row">
 						<div class="col-4 col-6-medium col-12-small">
@@ -117,9 +117,9 @@
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="http://greedfall.com/" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/greedfall.jpg" alt="" /></a>
-								<h3><a href="http://greedfall.com/" target="_blank">Greedfall (Released for PC, XBOX One and PS4)</a></h3>
+								<h3><a href="http://greedfall.com/" target="_blank">Greedfall (PC, XBOX One and PS4)</a></h3>
 								<p>As a GUI integrator, I was responsible for the integration of the UI assets and I also retouched/created several icons and other elements.</p>
-								<p>Role: <b>GUI artist</b></p>								
+								<p>Role: <b>GUI artist/Integrator (internship)</b></p>								
 								<a href="http://greedfall.com/" class="button small scrolly" target="_blank">Check it out</a>
 							</article>
 						</div>
@@ -142,6 +142,7 @@
 								
 							</article>
 						</div>
+
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="https://www.youtube.com/watch?v=gSYmrgwn3Lo&feature=youtu.be" class="image featured"><img src="images/portfolio_thumbnails/lemaitre.png" alt="" /></a>
@@ -151,6 +152,17 @@
 								<a href="https://www.youtube.com/watch?v=gSYmrgwn3Lo&feature=youtu.be" class="button small scrolly" target="_blank">Check it out</a>
 							</article>
 						</div>
+
+						<div class="col-4 col-6-medium col-12-small">
+							<article class="box style2">
+								<a href="https://nielisson.itch.io/wyvern-circus" class="image featured"><img src="images/portfolio_thumbnails/wyvern.png" alt="" /></a>
+								<h3><a href="https://nielisson.itch.io/wyvern-circus" target="_blank">Wyvern Circus</a></h3>
+								<p>A working dragon who caught a cold. What could go wrong?</p>
+								<p>Roles: <b>Game and Level Design | Art </b></p>								
+								<a href="https://nielisson.itch.io/wyvern-circus" class="button small scrolly" target="_blank">Check it out</a>
+							</article>
+						</div>
+
 					</div>
 					<footer>
 						<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
