--- a/index.html
+++ b/index.html
@@ -163,6 +163,16 @@
 							</article>
 						</div>
 
+						<div class="col-4 col-6-medium col-12-small">
+							<article class="box style2">
+								<a href="https://nielisson.itch.io/great-ocean-truck" class="image featured"><img src="images/portfolio_thumbnails/great.png" alt="" /></a>
+								<h3><a href="https://nielisson.itch.io/great-ocean-truck" target="_blank">Great Ocean Truck</a></h3>
+								<p>When moving out is all about fun and balance!</p>
+								<p>Roles: <b>Game Design | Art </b></p>								
+								<a href="https://nielisson.itch.io/great-ocean-truck" class="button small scrolly" target="_blank">Check it out</a>
+							</article>
+						</div>
+
 					</div>
 					<footer>
 						<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
