--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 								<a href="https://nielisson.itch.io/candy-tower" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/candy_tower.png" alt="Candy Tower" /></a>
 								<h3><a href="https://nielisson.itch.io/candy-tower" target="_blank">Candy Tower</a></h3>
 								<p>In this tower defense, your main objective is to destroy all teeth with candies! Isn't that what candies do?</p>
-								<p>Roles: <b>Programming and Graphics</b></p>
+								<p>Roles: <b>Programming | Art</b></p>
 								<a href="https://nielisson.itch.io/candy-tower" class="button small scrolly" target="_blank">Check it out</a>
 								
 							</article>
@@ -69,7 +69,7 @@
 								<a href="https://dyoxyne.itch.io/playback-brackeys-jam-20202" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/playback.gif" alt="Playback" /></a>
 								<h3><a href="https://dyoxyne.itch.io/playback-brackeys-jam-20202" target="_blank">Playback</a></h3>
 								<p>Everyone in town is looking for something to brighten up their day. With the help of your cassette recorder, you can record and rewind the sounds that people need to turn their moods around!</p>
-								<p>Roles: <b>Game Design and Graphics</b></p>
+								<p>Roles: <b>Game Design | Art</b></p>
 								<a href="https://dyoxyne.itch.io/playback-brackeys-jam-20202" class="button small scrolly" target="_blank">Check it out</a>
 							</article>
 						</div>
@@ -78,7 +78,7 @@
 								<a href="http://greedfall.com/" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/greedfall.jpg" alt="" /></a>
 								<h3><a href="http://greedfall.com/" target="_blank">Greedfall (PC, XBOX One and PS4)</a></h3>
 								<p>As a GUI integrator, I was responsible for the integration of the UI assets and I also retouched/created several icons and other elements.</p>
-								<p>Role: <b>GUI artist/Integrator (internship)</b></p>								
+								<p>Role: <b>GUI artist | Integrator (internship)</b></p>								
 								<a href="http://greedfall.com/" class="button small scrolly" target="_blank">Check it out</a>
 							</article>
 						</div>
@@ -129,6 +129,18 @@
 								<p>When moving out is all about fun and balance!</p>
 								<p>Roles: <b>Game Design | Art </b></p>								
 								<a href="https://nielisson.itch.io/great-ocean-truck" class="button small scrolly" target="_blank">Check it out</a>
+							</article>
+						</div>
+
+						
+						<div class="col-4 col-6-medium col-12-small">
+							<article class="box style2">
+								<a href="https://nielisson.itch.io/note-to-self" class="image featured"><img src="images/portfolio_thumbnails/note.png" alt="" /></a>
+								<h3><a href="https://nielisson.itch.io/note-to-self" target="_blank">Note to self:</a></h3>
+								<p>During a brisk autumn night, Hugo wanders the streets in search for his love with utterly no regard for his surroundings. 
+									Our game was featured on <a href="https://youtu.be/XeV0bmTLacM?t=83" target="_blank">Brackeys' channel!</a></p>
+								<p>Roles: <b>Game Design | Art </b></p>								
+								<a href="https://nielisson.itch.io/note-to-self" class="button small scrolly" target="_blank">Check it out</a>
 							</article>
 						</div>
 
