--- a/index.html
+++ b/index.html
@@ -139,7 +139,8 @@
 								<h3><a href="https://nielisson.itch.io/note-to-self" target="_blank">Note to self:</a></h3>
 								<p>During a brisk autumn night, Hugo wanders the streets in search for his love with utterly no regard for his surroundings. 
 									Our game was featured on <a href="https://youtu.be/XeV0bmTLacM?t=83" target="_blank">Brackeys' channel!</a></p>
-								<p>Roles: <b>Game Design | Art </b></p>								
+								<p>Roles: <b>Game Design | Art </b></p>	
+								<a href="https://youtu.be/GNpKn6mdovk" class="button small scrolly" target="_blank">Watch the gameplay</a>							
 								<a href="https://nielisson.itch.io/note-to-self" class="button small scrolly" target="_blank">Check it out</a>
 							</article>
 						</div>
