--- a/index.html
+++ b/index.html
@@ -145,6 +145,17 @@
 							</article>
 						</div>
 
+						<div class="col-4 col-6-medium col-12-small">
+								<article class="box style2">
+									<a href="https://nielisson.itch.io/nobamboo" class="image featured"><img src="images/portfolio_thumbnails/note.png" alt="" /></a>
+									<h3><a href="https://nielisson.itch.io/nobamboo" target="_blank">NoBamboo</a></h3> Extra Credits Game Jam - 03/2019
+									<p>Ferdinand was entrusted three special eggs and his mission is to deliver them to the White Temple in order to restore the balance of world.</p>
+									<p>Roles: <b>Game and Level Design | Art </b></p>	
+									<a href="https://youtu.be/TKyT1Yqcmc0" class="button small scrolly" target="_blank">Watch the gameplay</a>							
+									<a href="https://nielisson.itch.io/nobamboo" class="button small scrolly" target="_blank">Check it out</a>
+								</article>
+							</div>
+
 					</div>
 					<footer>
 						<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
