--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
 						<div class="col-4 col-6-medium col-12-small">
 								<article class="box style2">
-									<a href="https://nielisson.itch.io/nobamboo" class="image featured"><img src="images/portfolio_thumbnails/note.png" alt="" /></a>
+									<a href="https://nielisson.itch.io/nobamboo" class="image featured"><img src="images/portfolio_thumbnails/nobamboo.png" alt="" /></a>
 									<h3><a href="https://nielisson.itch.io/nobamboo" target="_blank">NoBamboo</a></h3> Extra Credits Game Jam - 03/2019
 									<p>Ferdinand was entrusted three special eggs and his mission is to deliver them to the White Temple in order to restore the balance of world.</p>
 									<p>Roles: <b>Game and Level Design | Art </b></p>	
@@ -155,6 +155,19 @@
 									<a href="https://nielisson.itch.io/nobamboo" class="button small scrolly" target="_blank">Check it out</a>
 								</article>
 							</div>
+
+							
+						<div class="col-4 col-6-medium col-12-small">
+								<article class="box style2">
+									<a href="https://globalgamejam.org/2019/games/host-shell-0" class="image featured"><img src="images/portfolio_thumbnails/host.gif" alt="" /></a>
+									<h3><a href="https://globalgamejam.org/2019/games/host-shell-0" target="_blank">Host in the Shell</a></h3> Global Game Jam 2019
+									<p>The only survivor of his kind, Thierry L’hermite, undertakes a long adventure that may lead him to the remains of his ancestors.</p>
+									<p>Roles: <b>Game and Level Design</b></p>	
+									<a href="https://youtu.be/Pf1hFFAivgs" class="button small scrolly" target="_blank">Watch the gameplay</a>							
+									<a href="https://globalgamejam.org/2019/games/host-shell-0" class="button small scrolly" target="_blank">Check it out</a>
+								</article>
+							</div>
+
 
 					</div>
 					<footer>
