--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
 								<h3><a href="https://nielisson.itch.io/candy-tower" target="_blank">Candy Tower</a></h3>
 								<p>In this tower defense, your main objective is to destroy all teeth with candies! Isn't that what candies do?</p>
 								<p>Roles: <b>Programming | Art</b></p>
-								<a href="https://nielisson.itch.io/candy-tower" class="button small scrolly" target="_blank">Check it out</a>
+								<a href="xxx" class="button small scrolly" target="_blank">Watch the gameplay</a>																																															
+								<a href="https://nielisson.itch.io/candy-tower" class="button small scrolly" target="_blank">Play the game</a>
 								
 							</article>
 						</div>
@@ -71,7 +72,7 @@
 								<p>Everyone in town is looking for something to brighten up their day. With the help of your cassette recorder, you can record and rewind the sounds that people need to turn their moods around!</p>
 								<p>Roles: <b>Game Design | Art</b></p>
 								<a href="https://youtu.be/OcjV2M3Y9Wg?t=310" class="button small scrolly" target="_blank">Watch Brackeys playing our game</a>																																															
-								<a href="https://dyoxyne.itch.io/playback-brackeys-jam-20202" class="button small scrolly" target="_blank">Check it out</a>
+								<a href="https://dyoxyne.itch.io/playback-brackeys-jam-20202" class="button small scrolly" target="_blank">Play the game</a>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
@@ -81,7 +82,7 @@
 								<p>As a GUI integrator, I was responsible for the integration of the UI assets and I also retouched/created several icons and other elements.</p>
 								<p>Role: <b>GUI artist | Integrator (internship)</b></p>			
 								<a href="https://youtu.be/_if32pyZP2w" class="button small scrolly" target="_blank">Watch the trailer</a>																																							
-								<a href="http://greedfall.com/" class="button small scrolly" target="_blank">Check it out</a>
+								<a href="http://greedfall.com/" class="button small scrolly" target="_blank">Play the game</a>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
@@ -91,7 +92,7 @@
 								<p>In this little puzzle, the player is supposed to make a clear path for a dog that is trapped in a house on fire. Watch the gameplay by the youtuber Nathan Blake.</p>
 								<p>Roles: <b>Game and Level Design | Art </b></p>
 								<a href="https://www.youtube.com/watch?v=TJwKPe-8M9E&feature=emb_title" class="button small scrolly" target="_blank">Watch the gameplay</a>																															
-								<a href="https://nielisson.itch.io/sky-puppy" class="button small scrolly" target="_blank">Check it out</a>
+								<a href="https://nielisson.itch.io/sky-puppy" class="button small scrolly" target="_blank">Play the game</a>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
@@ -101,7 +102,7 @@
 								<p>Lost in a strange world, these tiny elves will have to make proof of their friendship by working together.</p>
 								<p>Roles: <b>Game and Level Design | Art </b></p>	
 								<a href="https://youtu.be/_xvAYG30d5g" class="button small scrolly" target="_blank">Watch the gameplay</a>																							
-								<a href="https://nielisson.itch.io/tiny-elves" class="button small scrolly" target="_blank">Check it out</a>
+								<a href="https://nielisson.itch.io/tiny-elves" class="button small scrolly" target="_blank">Play the game</a>
 								
 							</article>
 						</div>
