--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 								<h3><a href="https://nielisson.itch.io/candy-tower" target="_blank">Candy Tower</a></h3>
 								<p>In this tower defense, your main objective is to destroy all teeth with candies! Isn't that what candies do?</p>
 								<p>Roles: <b>Programming | Art</b></p>
-								<a href="xxx" class="button small scrolly" target="_blank">Watch the gameplay</a>																																															
+								<a href="https://youtu.be/GnKbWBe_xkk" class="button small scrolly" target="_blank">Watch the gameplay</a>																																															
 								<a href="https://nielisson.itch.io/candy-tower" class="button small scrolly" target="_blank">Play the game</a>
 								
 							</article>
