--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="https://nielisson.itch.io/sky-puppy" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/skypuppy.png" alt="" /></a>
-								<h3><a href="https://nielisson.itch.io/sky-puppy" target="_blank">SkyPuppy</a></h3>
+								<h3><a href="https://nielisson.itch.io/sky-puppy" target="_blank">SkyPuppy</a></h3>(soon released for mobile )
+								<p>The Tenth Creative Games Jam - 02/2019</p>
 								<p>In this little puzzle, the player is supposed to make a clear path for a dog that is trapped in a house on fire. Watch the gameplay by the youtuber Nathan Blake.</p>
 								<p>Roles: <b>Game and Level Design | Art </b></p>
 								<a href="https://www.youtube.com/watch?v=TJwKPe-8M9E&feature=emb_title" class="button small scrolly" target="_blank">Watch the gameplay</a>																															
@@ -99,6 +100,7 @@
 							<article class="box style2">
 								<a href="https://nielisson.itch.io/tiny-elves" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/tinyelves.gif" alt="" /></a>
 								<h3><a href="https://nielisson.itch.io/tiny-elves" target="_blank">Tiny Elves: mighty friendship</a></h3>
+								<p>Personal project - 09/2019</p>
 								<p>Lost in a strange world, these tiny elves will have to make proof of their friendship by working together.</p>
 								<p>Roles: <b>Game and Level Design | Art </b></p>	
 								<a href="https://youtu.be/_xvAYG30d5g" class="button small scrolly" target="_blank">Watch the gameplay</a>																							
@@ -111,6 +113,7 @@
 							<article class="box style2">
 								<a href="https://www.youtube.com/watch?v=gSYmrgwn3Lo&feature=youtu.be" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/lemaitre.png" alt="" /></a>
 								<h3><a href="https://www.youtube.com/watch?v=gSYmrgwn3Lo&feature=youtu.be" target="_blank">Le maître de la flûte en bois</a></h3>
+								<p>Student project - 12/2018</p>
 								<p>An adventure about a forest spirit that accompany a flock of birds that are migrating to the south.</p>
 								<p>Roles: <b>Game and Level Design | Art </b></p>								
 								<a href="https://www.youtube.com/watch?v=gSYmrgwn3Lo&feature=youtu.be" class="button small scrolly" target="_blank">Watch the gameplay</a>
@@ -121,6 +124,7 @@
 							<article class="box style2">
 								<a href="https://nielisson.itch.io/wyvern-circus" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/wyvern.png" alt="" /></a>
 								<h3><a href="https://nielisson.itch.io/wyvern-circus" target="_blank">Wyvern Circus</a></h3>
+								<p>ArtBook and game prototype - 03/2019</p>
 								<p>A working dragon who caught a cold. What could go wrong?</p>
 								<p>Roles: <b>Game and Level Design | Art </b></p>	
 								<a href="https://www.behance.net/gallery/79393471/Wyvern-Circus-Artbook" class="button small scrolly" target="_blank">Check out the artbook</a>																							
@@ -132,6 +136,7 @@
 							<article class="box style2">
 								<a href="https://nielisson.itch.io/great-ocean-truck" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/great.png" alt="" /></a>
 								<h3><a href="https://nielisson.itch.io/great-ocean-truck" target="_blank">Great Ocean Truck</a></h3>
+								<p>Personal project - 10/2019</p>
 								<p>When moving out is all about fun and balance!</p>
 								<p>Roles: <b>Game Design | Art </b></p>								
 								<a href="https://www.youtube.com/watch?v=jHvJbw-N3Ak&list=PL2HDE-lq9I_DfnDnGb0Zb0CouIHbHMrnO&index=4&t=0s" class="button small scrolly" target="_blank">Watch the gameplay</a>															
@@ -144,6 +149,7 @@
 							<article class="box style2">
 								<a href="https://nielisson.itch.io/note-to-self" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/note.png" alt="" /></a>
 								<h3><a href="https://nielisson.itch.io/note-to-self" target="_blank">Note to self:</a></h3>
+								<p>Brackeys Game Jam - 02/2019</p>
 								<p>During a brisk autumn night, Hugo wanders the streets in search for his love with utterly no regard for his surroundings. 
 									Our game was featured on <a href="https://youtu.be/XeV0bmTLacM?t=83" target="_blank">Brackeys' channel!</a></p>
 								<p>Roles: <b>Game Design | Art </b></p>	
@@ -155,7 +161,8 @@
 						<div class="col-4 col-6-medium col-12-small">
 								<article class="box style2">
 									<a href="https://nielisson.itch.io/nobamboo" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/nobamboo.png" alt="" /></a>
-									<h3><a href="https://nielisson.itch.io/nobamboo" target="_blank">NoBamboo</a></h3> Extra Credits Game Jam - 03/2019
+									<h3><a href="https://nielisson.itch.io/nobamboo" target="_blank">NoBamboo</a></h3> 
+									<p>Extra Credits Game Jam - 03/2019</p>
 									<p>Ferdinand was entrusted three special eggs and his mission is to deliver them to the White Temple in order to restore the balance of world.</p>
 									<p>Roles: <b>Game and Level Design | Art </b></p>	
 									<a href="https://youtu.be/TKyT1Yqcmc0" class="button small scrolly" target="_blank">Watch the gameplay</a>							
