--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
 							<article class="box style2">
 								<a href="https://nielisson.itch.io/candy-tower" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/candy_tower.png" alt="Candy Tower" /></a>
 								<h3><a href="https://nielisson.itch.io/candy-tower" target="_blank">Candy Tower</a></h3>
+								<p>Student project - 08/2020</p>
 								<p>In this tower defense, your main objective is to destroy all teeth with candies! Isn't that what candies do?</p>
 								<p>Roles: <b>Programming | Art</b></p>
 								<a href="https://youtu.be/GnKbWBe_xkk" class="button small scrolly" target="_blank">Watch the gameplay</a>																																															
@@ -69,6 +70,7 @@
 							<article class="box style2">
 								<a href="https://dyoxyne.itch.io/playback-brackeys-jam-20202" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/playback.gif" alt="Playback" /></a>
 								<h3><a href="https://dyoxyne.itch.io/playback-brackeys-jam-20202" target="_blank">Playback</a></h3>
+								<p>Brackeys Jam 2020.2 - 08/2020</p>
 								<p>Everyone in town is looking for something to brighten up their day. With the help of your cassette recorder, you can record and rewind the sounds that people need to turn their moods around!</p>
 								<p>Roles: <b>Game Design | Art</b></p>
 								<a href="https://youtu.be/OcjV2M3Y9Wg?t=310" class="button small scrolly" target="_blank">Watch Brackeys playing our game</a>																																															
@@ -78,7 +80,7 @@
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="http://greedfall.com/" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/greedfall.jpg" alt="" /></a>
-								<h3><a href="http://greedfall.com/" target="_blank">Greedfall (PC, XBOX One and PS4)</a></h3>
+								<h3><a href="http://greedfall.com/" target="_blank">Greedfall</a></h3>(PC, XBOX One and PS4)
 								<p>As a GUI integrator, I was responsible for the integration of the UI assets and I also retouched/created several icons and other elements.</p>
 								<p>Role: <b>GUI artist | Integrator (internship)</b></p>			
 								<a href="https://youtu.be/_if32pyZP2w" class="button small scrolly" target="_blank">Watch the trailer</a>																																							
