--- a/index.html
+++ b/index.html
@@ -90,7 +90,8 @@
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="https://nielisson.itch.io/sky-puppy" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/skypuppy.png" alt="" /></a>
-								<h3><a href="https://nielisson.itch.io/sky-puppy" target="_blank">SkyPuppy</a></h3>(soon released for mobile )
+								<h3><a href="https://nielisson.itch.io/sky-puppy" target="_blank">SkyPuppy</a></h3>
+								<p>(soon released for mobile)</p>
 								<p>The Tenth Creative Games Jam - 02/2019</p>
 								<p>In this little puzzle, the player is supposed to make a clear path for a dog that is trapped in a house on fire. Watch the gameplay by the youtuber Nathan Blake.</p>
 								<p>Roles: <b>Game and Level Design | Art </b></p>
@@ -102,7 +103,7 @@
 							<article class="box style2">
 								<a href="https://nielisson.itch.io/tiny-elves" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/tinyelves.gif" alt="" /></a>
 								<h3><a href="https://nielisson.itch.io/tiny-elves" target="_blank">Tiny Elves: mighty friendship</a></h3>
-								<p>Personal project - 09/2019</p>
+								<p><i>Personal project - 09/2019</i></p>
 								<p>Lost in a strange world, these tiny elves will have to make proof of their friendship by working together.</p>
 								<p>Roles: <b>Game and Level Design | Art </b></p>	
 								<a href="https://youtu.be/_xvAYG30d5g" class="button small scrolly" target="_blank">Watch the gameplay</a>																							
