--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 								<h1><strong>Nielisson Mendonca</strong></h1>
 							</header>
 							<p>2D artist, Game and Level Designer</p>
-							<a href="documents/CV_Nielisson-Mendonca-Da-Silva_EN.pdf" class="button large scrolly">Download my resume</a>
-							<a href="documents/CV_Nielisson-Mendonca-Da-Silva_FR" class="button large scrolly">Télécharger mon CV</a>
+							<a href="documents/CV_Nielisson-Mendonca-Da-Silva_EN.pdf" class="button large scrolly" target="_blank">Download my resume</a>
+							<a href="documents/CV_Nielisson-Mendonca-Da-Silva_FR.pdf" class="button large scrolly" target="_blank">Télécharger mon CV</a>
 							
 							
 						</div>
