--- a/index.html
+++ b/index.html
@@ -186,6 +186,18 @@
 								</article>
 							</div>
 
+							<div class="col-4 col-6-medium col-12-small">
+								<article class="box style2">
+									<a href="https://uchiro.itch.io/downwards" class="image featured" target="_blank"><img src="images/portfolio_thumbnails/downwards.gif" alt="" /></a>
+									<h3><a href="https://uchiro.itch.io/downwards" target="_blank">Downwards</a></h3> 
+									<p>Weekly Game Jam - Week 49 - 07/2018</p>
+									<p>Have you ever been tempted by shiny things?</p>
+									<p>Roles: <b>Game and Level Design | Art</b></p>	
+									<a href="https://youtu.be/xnpIdJqgnM4" class="button small scrolly" target="_blank">Watch</a>							
+									<a href="https://uchiro.itch.io/downwards" class="button small scrolly" target="_blank">Play</a>
+								</article>
+							</div>
+
 
 					</div>
 					<footer>
